[tool.poetry]
name = "learn-sqlalchemy"
version = "0.1.0"
description = "This codebase is built while learning sqlalchemy"
authors = ["Avanindra Kumar Pandeya <akpandeya1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
